--- a/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:paddingHorizontal="24dp"
     android:paddingTop="60dp"
-    android:paddingBottom="24dp"
     android:background="@color/white"
     android:id="@+id/fragment_all_recipe"
     tools:context=".ui.recipe.AllRecipeFragment">
@@ -67,7 +66,7 @@
                 android:fontFamily="@font/pretendard_regular"
                 android:hint="원하는 레시피를 찾아보세요!"
                 android:inputType="text"
-                android:imeOptions="actionDone"
+                android:imeOptions="actionSearch"
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -142,32 +141,10 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:focusable="false"
-            app:layout_constraintBottom_toTopOf="@+id/allrecipe_fm_fl_btn_search_bottom"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view" />
-
-        <FrameLayout
-            android:id="@+id/allrecipe_fm_fl_btn_search_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/pretendard_semibold"
-                android:layout_gravity="center"
-                android:text="검색하기"
-                android:textColor="@color/white"
-                android:textSize="16sp"/>
-
-        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
