--- a/reper_front/app/src/main/res/navigation/nav_graph.xml
+++ b/reper_front/app/src/main/res/navigation/nav_graph.xml
@@ -71,7 +71,7 @@
         android:label="fragment_recipe_manage"
         tools:layout="@layout/fragment_recipe_manage" />
     <fragment
-        android:id="@+id/storeManage"
+        android:id="@+id/storeManageFragment"
         android:name="com.ssafy.reper.ui.boss.StoreManageFragment"
         android:label="fragment_store_manage"
         tools:layout="@layout/fragment_store_manage" />
